--- a/daily_report.yml
+++ b/daily_report.yml
@@ -2,8 +2,8 @@ name: Run Daily Market Report
 
 on:
   schedule:
-    - cron: '0 12 * * *'  # 8 AM ET daily
-    - cron: '0 */4 * * *' # Every 4 hours
+    - cron: '0 12 * * *'   # 8:00 AM ET
+    - cron: '0 */4 * * *'  # Every 4 hours
   workflow_dispatch:
 
 jobs:
@@ -22,11 +22,18 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run automated market pipeline
         run: python automated_pipeline.py
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
+      - name: Commit and push output CSV
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add pre_xynth_trades.csv || echo "No file to add"
+          git commit -m "Add daily pre-xynth trades CSV" || echo "No changes to commit"
+          git push || echo "Nothing to push"
