--- a/daily_report.yml
+++ b/daily_report.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # 🔐 Needed to push to repo
+      contents: write
 
     steps:
       - uses: actions/checkout@v3
@@ -30,10 +30,10 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
-      - name: Commit and push output CSV
+      - name: Commit and push new CSV
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add pre_xynth_trades.csv || echo "No file to add"
-          git commit -m "Add daily pre-xynth trades CSV" || echo "No changes to commit"
+          git add *.csv || echo "No files to add"
+          git commit -m "Add new timestamped pre-xynth trades CSV" || echo "No changes to commit"
           git push || echo "Nothing to push"
