--- a/daily_report.yml
+++ b/daily_report.yml
@@ -3,15 +3,19 @@ name: daily-report
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8 * * *'  # 8 AM UTC (adjust as needed)
+    - cron: '0 8 * * *'  # 8 AM UTC
 
 jobs:
   run-report:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # <-- 🔑 Gives push access to GitHub Actions
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -30,10 +34,11 @@ jobs:
 
       - name: Commit and push output CSV
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          
           FILE=$(ls pre_xynth_trades_*.csv | sort | tail -n 1)
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add "$FILE"
-          git commit -m "Add daily report: $FILE"
+          git commit -m "Add daily report: $FILE" || echo "No changes to commit"
           git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
