--- a/daily_report.yml
+++ b/daily_report.yml
@@ -3,19 +3,17 @@ name: daily-report
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8 * * *'  # 8 AM UTC daily
+    - cron: '0 8 * * *'  # Runs daily at 8 AM UTC
 
 jobs:
   run-report:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write  # Needed to push files
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.REPO_PUSH_TOKEN }}  # Using custom token
+          token: ${{ secrets.REPO_PUSH_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -24,21 +22,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run automated market pipeline
+      - name: Run automated pipeline
         run: |
-          echo "🚀 Running automated pipeline..."
+          echo "🚀 Running pipeline"
           python automated_pipeline.py
 
-      - name: Commit and push output CSV
+      - name: Commit and push CSV file
         run: |
-          FILE=$(ls pre_xynth_trades_*.csv | sort | tail -n 1)
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          echo "🔍 Searching for CSV file..."
+          FILE=$(ls pre_xynth_trades_*.csv | tail -n 1)
+          echo "📄 Found file: $FILE"
+
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
           git add "$FILE"
-          git commit -m "Add daily report: $FILE" || echo "No changes to commit"
-          git push origin main
-        env:
-          REPO_PUSH_TOKEN: ${{ secrets.REPO_PUSH_TOKEN }}
+          git commit -m "📈 Add daily report: $FILE" || echo "⚠️ Nothing to commit"
+          git push origin HEAD:main
